crates/bevy_reflect_compile_fail_tests/tests/reflect_derive/custom_where.fail.stderr
error: expected identifier, found keyword `where`
  --> tests/reflect_derive/custom_where.fail.rs:15:20
   |
15 | #[reflect(MyTrait, where)]
   |                    ^^^^^

error: unexpected token
  --> tests/reflect_derive/custom_where.fail.rs:24:16
   |
24 | #[reflect(where, MyTrait)]
   |                ^
